feat: add global exception handler and improve error handling across services